--- a/404.html
+++ b/404.html
@@ -1,11 +1,10 @@
 ---
 permalink: /404.html
-layout: single
+layout: page
 title: "Page Not Found"
 sitemap: false
-author_profile: true
 ---
 
-**Page not found :(**
+Page not found. The requested page could not be found.
 
-The requested page could not be found.
+[Go back home](/).
